2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* docs/reference/gtksourceview-docs.sgml: fix style scheme manager docs.

2007-08-27  Paolo Maggi  <paolo@gnome.org>

	* docs/reference/gtksourceview-2.0-sections.txt:
	* docs/reference/tmpl/languagemanager.sgml: updated

	* gtksourceview/gtksourcelanguagemanager.[ch]: modified according
	to API review, in particular list_languages has been removed and
	replace with get_language_ids.

	* gtksourceview/gtksourcestylescheme.h: 
	* gtksourceview/gtksourcestyleschememanager.[ch]: indentation changes

	* tests/test-widget.c (get_language_for_filename),
	(get_language_for_mime_type): work with the new API

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcestyleschememanager.[ch]: api review:
	style-manager -> style-scheme-manager.

	* gtksourceview/gtksourcebuffer.c: adapt to the above.
	* gtksourceview/gtksourcestylescheme.c: adapt to the above.

2007-08-27  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourcebuffer.[ch]: documentation fixes

2007-08-27  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourcestylescheme.[ch]: 
	add gtk_source_style_scheme_get_authors	method

	* gtksourceview/language-specs/language2.rng: support multiple
	<author> elements
	* gtksourceview/language-specs/styles.rng: ditto
	* tests/test-widget.c (main): test for the 
	gtk_source_style_scheme_get_authors method

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.[ch]: api review: margin ->
	margin-position, show-margin -> show-right-margin.

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/html.lang:
	* gtksourceview/language-specs/php.lang:

	Detect html inside php and viceversa. Patch by Eric Norige,
	fixes remaining part of bug #448513.

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c: rise the max value for the
	max-undo-levels property and allow -1 to mean 'no limit'.
